# playground

./: LICENSE  README.md
avx512/: avx512_max.cpp  avx_shift.cpp
cpp/: dynamic_function.cpp  functor.cpp  std_equal.cpp  std_forward_and_move.cpp  std_function_overhead.cpp  switch_func.cpp  type_convert.cpp  variadic.cpp
cuda/: cuda_launch_test.cpp
hash/: repeated_string_hash.cpp
llvm/: CMakeLists.txt  build.sh  command.txt  dummy.cpp  llvm-17 optimization pass structure.drawio  obj_file  remote_tagging.cpp  remote_tagging.hpp  src.h  src_file.cpp
memcpy/: memcpy_test.cpp  memcpy_test.s  memcpy_test_clang.s  memcpy_test_gcc.s
network/: port_scan.py
statistics/: distribution_generator.cpp
